--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,8 @@
 services:
   - type: web
-    name: fastapi-app
+    name: vssp-fastapi
+    runtime: python
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host=0.0.0.0 --port=$PORT
-    pythonVersion: 3.11.8
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port 10000
+    plan: free
