--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,9 @@
 services:
   - type: web
-    name: vssp-fastapi
+    name: vssp-api
     runtime: python
-    env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port 10000
-    plan: free
+    startCommand: uvicorn app.main:app --host=0.0.0.0 --port=$PORT
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.10.13
