--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "src": "app/main.py",
       "use": "@vercel/python",
       "config": {
-        "maxLambdaSize": "50mb"
+        "runtime": "python3.12"
       }
     }
   ],
