--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-fastapi==0.95.2
+fastapi>=0.110.0
+pydantic>=2.7.1
 uvicorn[standard]==0.24.0
 firebase-admin==6.2.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 python-dotenv==1.0.0
-pydantic==1.10.14
 email-validator==2.1.1
 gunicorn==21.2.0
